# SManager

./: .env.example  .gitignore  Cargo.toml  PROPOSAL.md  README.md  docker-compose.yaml
agent/: .env.example  Cargo.toml  Dockerfile
agent/migrations/: 20260328163930_create_users_table.sql  20260330124100_add_tokens_for_cores_and_tasks.sql  20260331185027_remove_port_from_cores.sql  20260402103928_migrating_to_tls_auth.sql  20260418104318_improve_runs_strucutre.sql  20260418114533_add_not_null_valure_to_runs_core.sql  20260429095208_delete_token_hash_from_tasks.sql  20260429120002_add_index_on_task_id_ro_runs.sql  20260501135345_add_another_test_cert.sql
agent/src/: config.rs  lib.rs  main.rs
agent/src/enums/: mod.rs  script_types.rs  task_errors.rs
agent/src/extern_server/: connection_registry.rs  mod.rs  server.rs  tls_helpers.rs
agent/src/handler/: authenticate_handler.rs  create_task_handler.rs  get_all_cores_handler.rs  get_all_task_handler.rs  mod.rs  new_core_handler.rs  new_task_handler.rs  remove_core_handler.rs  remove_task_handler.rs  test_handler.rs  update_cure.rs  update_task_handler.rs
agent/src/handler/extern_server/: get_all_cores_handler.rs  get_all_task_handler.rs  get_all_tasks_handler.rs  mod.rs  ping_handler.rs  run_task_handler.rs  start_stream_handler.rs  stop_stream_handler.rs  stop_task_handler.rs  update_task_handler.rs
agent/src/handler/intern_server/: authenticate_handler.rs  mod.rs
agent/src/intern_server/: connection_context.rs  handler_trait.rs  mod.rs  server.rs
agent/src/managers/: managed_task.rs  mod.rs  task_manager.rs  token_manager.rs
agent/src/repository/: task_repository.rs
certs/dev/: WORNING.md  ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  client2.crt  client2.csr  client2.key  server.crt  server.csr  server.key
core/: .env.example  Cargo.toml
core/migrations/: 20260402092119_core_db.sql  20260418193000_seed_initial_admin_user.sql  20260430110000_make_tasks_composite_primary_key.sql
core/src/: lib.rs  main.rs  state.rs
core/src/handler/: get_all_agents_handler.rs  get_all_tasks_handler.rs  get_all_users_handler.rs  get_logs_handler.rs  mod.rs  (+11 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json
frontend/src/: App.tsx  index.css
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/db/: db_connector.rs  mod.rs
shared/src/db/models/: agent.rs  core.rs  enums.rs  log.rs  mod.rs  run.rs  task.rs  task_core.rs  user.rs
shared/src/enums/: execution_stream_event.rs  mod.rs  script_types.rs
shared/src/server/: connection_context.rs  endpoint.rs  generate_token.rs  get_hash.rs  handler_trait.rs  message.rs  mod.rs  server.rs
shared/src/server/dto/: agent_response_dto.rs  create_agent_dto.rs  create_core_dto.rs  create_task_core_dto.rs  create_user_dto.rs  get_cores_dto.rs  get_logs_dto.rs  get_users_dto.rs  login_response_dto.rs  login_user_dto.rs  mod.rs  new_task_request_dto.rs  run_task_dto.rs  update_agent_dto.rs  update_task_core_dto.rs  update_task_dto.rs  update_user_dto.rs  user_response_dto.rs
(+72 files in other folders)
