[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "macros"
] }
async-trait = "0.1"
dotenvy = "0.15.7"

shared = { path = "../shared" }
anyhow = "1.0.102"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "agent_lib"
path = "src/lib.rs"