[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "tls-native-tls"
] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"


tokio = { version = "1.50.0", features = ["full"] }
async-trait = "0.1"

anyhow = "1.0.102"
