[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "tls-native-tls"
] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"


tokio = { version = "1.50.0", features = ["full"] }
async-trait = "0.1"

anyhow = "1.0.102"


tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

jsonwebtoken = "9"

log = "0.4"
env_logger = "0.11"

rand = "0.8"
base64 = "0.21"
sha2 = "0.10"

tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
x509-parser = "0.18.1"